// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component renders 1`] = `
<div>
  <div
    class="css-s37awk"
  />
</div>
`;

exports[`ComponentInline renders and defaults to a div 1`] = `
<div>
  <div
    class="css-6577wb"
  />
</div>
`;

exports[`ComponentLink should receive href props 1`] = `
<div>
  <a
    class="css-6577wb"
    href="https://sancho.dev"
  />
</div>
`;

exports[`ComponentLink should render an <a /> tag 1`] = `
<div>
  <a
    class="css-6577wb"
  />
</div>
`;
